# kubeflow-uv-notebook

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  plan.md  pyproject.toml
.github/: SETUP_CI_CD.md
.github/workflows/: build-and-push.yml  docker-build-main.yml
config/: code-server-config.yaml  jupyter_lab_config.py
docs/: DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md
kubeflow/: notebook-gpu.yaml  notebook.yaml
s6/cont-init.d/: 01-configure-env
s6/services.d/code-server/: finish  run
s6/services.d/jupyterlab/: finish  run
scripts/: build.sh  push.sh  test-build.sh  test-gpu.sh  test-local.sh
tests/: test_gpu.py  test_image.py  test_kubeflow.py
wiki/: Contributing.md  Getting-Started.md  Home.md  Image-Variants.md  Kubeflow-Deployment.md  Testing.md  Troubleshooting.md  Usage-Guide.md
