[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kubeflow-workspace"
version = "0.1.0"
description = "Example project for Kubeflow notebook with UV and code-server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
keywords = ["kubeflow", "notebook", "jupyter", "code-server", "uv"]

dependencies = [
    # Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",

    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",

    # Jupyter
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",

    # Utilities
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/danghoangnhan/kubeflow-notebook-uv"
"Bug Tracker" = "https://github.com/danghoangnhan/kubeflow-notebook-uv/issues"
"Documentation" = "https://github.com/danghoangnhan/kubeflow-notebook-uv#readme"
"Source Code" = "https://github.com/danghoangnhan/kubeflow-notebook-uv"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
